# drake

./: CMakeLists.txt
bindings/pydrake/multibody/: rigid_body_tree_py.cc
drake/examples/: DoubleIntegrator.m  smax.m
drake/examples/Acrobot/: Acrobot.urdf  AcrobotCollision.urdf  AcrobotPlant.m  ball.urdf  brick.urdf  brick_point_contact.urdf  checkDirtranGradients.m  dirtranBallTest.m  dirtranBrickTest.m  robustSwingUp.m  runDirtranBallBat.m  runPassiveWithBall.m  runSwingUp.m  runiLQR.m  runiLQRWithBall.m  testMinMaxQP.m
drake/examples/Atlas/: runAtlasBalancing.m  runAtlasDynamics.m  runAtlasSagittalDynamics.m  runAtlasWalking.m  runDirtranManip.m
drake/examples/CartDoublePendulum/: CartDoublePendulumPlant.m  CartDoublePendulumVisualizer.m  dynamicsGradients.m  runSwingUp.m
drake/examples/CartPole/: CartPolePlant.m  runRobustSwingUp.m
drake/examples/KneedCompassGait/: runiLQR.m
drake/examples/KukaArm/: KukaArm.m  runDirtranManip.m  runPassive.m  testExternalForce.m
drake/examples/OneLegHopper/: CMakeLists.txt  OneLegHopperState.m  checkDirtranGradients.m  runDDP.m  runDirtran.m  runPassive.m  runiLQR.m  test.m  (+2 more)
drake/solvers/: NonlinearProgram.m  boxQP.m  iLQG.m  qcqp.m
drake/util/: barrier.m  catstruct.m  comm.m  dupl.m  sig.m  smax.m  smin.m  smooth_barrier.m  test_smin.m  tmMult.m  tvMult.m
examples/: BUILD.bazel
examples/Atlas/: Atlas.m  runAtlasBalancing.m  runAtlasDynamics.m  runAtlasLQR.m  runAtlasMomentumLQR.m  runAtlasRunning.m  runAtlasSagittalDynamics.m
examples/LittleDog/: .gitignore  BodyMotionControlBlock.m  FootContactBlock.m  FootContactState.m  IKPDBlock.m  LittleDog.m  LittleDog.urdf  LittleDogCoordinates.m  LittleDogState.m  QTrajEvalBlock.m  README.md  gaitOptimization.m  runLittleDogBalancing.m  startup.m
examples/cassie/: BUILD.bazel  cassie_common.cc  cassie_common.h  cassie_simulation_test.cc
multibody/: rigid_body_tree.cc
solvers/: LinearComplementarityProgram.m
systems/@DynamicalSystem/: tilqr.m
systems/controllers/: QPCommon.cpp  QPController.m  SimpleTIQPController.m  controlUtil.cpp  controlUtil.h
systems/plants/: TimeSteppingRigidBodyManipulator.m
systems/robotInterfaces/: QPLocomotionPlan.m
util/: drakeGeometryUtil.h
(+234 files in other folders)
